# woflo

./: .gitignore  .gitlint  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  sonar-project.properties  sonar.tf
.github/workflows/: python-lint.yml  python-publish.yml  python-test.yml
scripts/: post-commit  save.sh
src/woflo/: __init__.py  task.py
src/woflo/runners/: __init__.py  asynchronous.py  base.py  multiprocess.py  multiprocessing.py  sequential.py
src/woflo/task/: __init__.py  __task.py  task.py
src/woflo/util/: __init__.py  __logger.py  util.py
src/woflo/workflow/: __init__.py  workflow.py
test/: task_test.py
